--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <div class="container">
 
     <!-- Header -->
+    <header>
 
-    <div class="header">
-      <a href="" class="button cart" id="right-cart">Cart <img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/cart.svg"></a>
-      <div class="image-container" id="right-image">
+      <div class="image-container">
         <img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/logo.svg">
       </div>
-    </div>
+      <a href="index.html" class="button cart">Cart <img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/cart.svg"></a>
+
+    </header>
+
+
     <nav>
       <a href="deals.html">Today's Deals</a>
       <a href="bestsellers.html">Bestsellers</a>
@@ -127,11 +130,12 @@
     <!-- Footer -->
 
     <footer>
-   
+
       <img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/logo.svg">
       <div class="links">
         <h4>Get to know us</h4>
         <a href="about.html">About us</a>
+        <a href="#">Jobs</a>
         <a href="#">Investor relations</a>
         <a href="#">Link</a>
       </div>
